--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.12.2
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+psycopg2-binary==2.8.6
 pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
